--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   justify-content: space-between !important;
   align-items: center;
   background-color: #E6E6E6;
-  /* position: sticky; */
+  position: sticky;
   top: 0;
   z-index: 1000;
 }
